# llm-apps

./: .env-example  README.md  main.py  pyproject.toml
notebooks/: Agentic Debate.ipynb  LLM Fundamental Blocks.ipynb  LLM Tools, Multi-Modality.ipynb  LLM Tools.ipynb  Ollama - Email Subject Generator.ipynb  OpenAI - Website Summarization.ipynb  RAG.ipynb  huggingface.ipynb
notebooks/data/business/: cloudsync_impact.md  dataviz_impact.md  fraud_detection_impact.md  healthtrack_impact.md  microservices_impact.md
notebooks/data/developers/: alex_chen.md  john_smith.md  raj_patel.md  sarah_johnson.md
notebooks/data/projects/: cloudsync.md  dataviz.md  fraud_detection.md  healthtrack.md  microservices.md
