[project]
name = "llm-apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "beautifulsoup4>=4.13.3",
    "google-generativeai>=0.8.4",
    "jupyterlab>=4.3.6",
    "langchain>=0.3.21",
    "ollama>=0.4.7",
    "openai>=1.68.2",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
