[project]
name = "llm-apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "beautifulsoup4>=4.13.3",
    "chromadb>=0.6.3",
    "faiss-cpu>=1.11.0",
    "google-generativeai>=0.8.4",
    "gradio>=5.23.3",
    "jupyterlab>=4.3.6",
    "langchain>=0.3.21",
    "langchain-azure-ai>=0.1.0",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.56",
    "langchain-ollama>=0.3.2",
    "langchain-openai>=0.3.14",
    "matplotlib>=3.10.1",
    "ollama>=0.4.7",
    "openai[voice-helpers]>=1.68.2",
    "plotly>=6.0.1",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
]
